Batches have history and we track each username that updates them
